fix: config name image

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,5 +41,5 @@ jobs:
           context: ./
           file: ./Dockerfile
           push: true
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/loo:latest
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/glog:latest
         if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/master' }}
